--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div id="htmlEditor" class="editor"></div>
       <div id="cssEditor" class="editor hidden"></div>
       <div id="jsEditor" class="editor hidden"></div>
+      <button id="showKeyboard" class="mobile-only floating-keyboard">Keyboard</button>
     </div>
 
     <div class="resizer" id="resizer"></div>
