--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       <div id="cssEditor" class="editor hidden"></div>
       <div id="jsEditor" class="editor hidden"></div>
       <button id="showKeyboard" class="mobile-only floating-keyboard">Keyboard</button>
-      <div id="touchShield" class="touch-shield mobile-only"></div>
     </div>
 
     <div class="resizer" id="resizer"></div>
@@ -32,4 +31,4 @@
   <script src="script.js"></script>
 </body>
 
-</html>
+</htm
