--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div id="htmlEditor" class="editor"></div>
       <div id="cssEditor" class="editor hidden"></div>
       <div id="jsEditor" class="editor hidden"></div>
-      <button id="showKeyboard" class="mobile-only floating-keyboard">Keyboard</button>
+     <button id="toggleEditMode" class="mobile-only floating-button">Edit Mode</button>
       <div id="touchShield" class="touch-shield mobile-only"></div>
     </div>
 
